data/derived/sp14/progs/unify/prog1985.ml.out
Characters 62-74:
  wwhile(if f b = b then (f b, true) else (f b, false),b);;
                                          ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool -> bool * bool
